--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "eHelply JavaScript SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && tsc && rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,12 @@
   },
   "homepage": "https://github.com/eHelply/JavaScript-eHelply-SDK#readme",
   "devDependencies": {
+    "@open-wc/building-rollup": "^1.10.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "deepmerge": "^4.2.2",
     "jest": "^27.1.0",
-    "typescript": "^4.3.5"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.56.3",
+    "typescript": "^4.4.2"
   }
 }
