--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ehelply-javascript-sdk",
+  "name": "ehelply-sdk",
   "version": "0.0.1",
   "description": "eHelply JavaScript SDK",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/eHelply/JavaScript-eHelply-SDK.git"
   },
-  "author": "",
+  "author": "wilson",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eHelply/JavaScript-eHelply-SDK/issues"
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@open-wc/building-rollup": "^1.10.0",
     "@rollup/plugin-json": "^4.1.0",
+    "axios": "^0.21.1",
     "deepmerge": "^4.2.2",
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "typescript": "^4.4.2"
-  }
+  },
+  "dependencies": {}
 }
