--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && tsc && rollup -c rollup.config.js"
+    "build": "rimraf dist && rollup -c rollup.config.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eHelply/JavaScript-eHelply-SDK.git"
@@ -19,9 +20,12 @@
   "homepage": "https://github.com/eHelply/JavaScript-eHelply-SDK#readme",
   "devDependencies": {
     "@open-wc/building-rollup": "^1.10.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
     "axios": "^0.21.1",
-    "deepmerge": "^4.2.2",
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
