--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eHelply JavaScript SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "type": "module",
@@ -26,9 +26,11 @@
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
     "axios": "^0.21.1",
+    "babel-jest": "^27.1.0",
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
   "dependencies": {}
