--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "ehelply-sdk",
   "version": "0.0.1",
   "description": "eHelply JavaScript SDK",
-  "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "type": "module",
@@ -25,13 +24,13 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
-    "axios": "^0.21.1",
-    "babel-jest": "^27.1.0",
+    "cross-env": "^7.0.3",
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
-    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.21.1"
+  }
 }
