--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eHelply JavaScript SDK",
   "scripts": {
     "test": "npm run build && cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "build": "rimraf dist && rollup -c rollup.config.js"
+    "build": "rimraf dist && node ./compiler.js"
   },
   "type": "module",
   "repository": {
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/eHelply/JavaScript-eHelply-SDK#readme",
   "devDependencies": {
-    "@open-wc/building-rollup": "^1.10.0",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -28,6 +27,7 @@
     "jest": "^27.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.2"
   },
   "dependencies": {
