--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -1,5 +1,7 @@
 name: Publish SDK
-concurrency: sdk_publish
+concurrency:
+  group: sdk_publish
+  cancel-in-progress: true
 on:
   push:
     branches:
