--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ehelply/superstack-sdk",
-  "version": "0.0.35",
+  "version": "0.0.41",
   "description": "eHelply JavaScript SDK",
   "main": "./dist/bundle.js",
   "types": "./dist/sdk.d.ts",
@@ -37,6 +37,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@ehelply/superstack-sdk": "^0.0.40",
     "axios": "^0.21.4"
   }
 }
