--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
       - name: Check out this repository
         uses: actions/checkout@v2
-      - name: Install node 14
+      - name: Install node 16
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm i
+      - run: npm install
       - run: npm run build
       - run: npm publish
         env:
